Added a help page with all of the help messages. Fixes #192

--- a/src/main/resources/properties/help.properties
+++ b/src/main/resources/properties/help.properties
@@ -3,22 +3,35 @@ associationMethod=
 export=
 fileExplorer=
 firstStep=
-inspectionpane=
+inspectionPanel=
 inspectionPanel.associations=
 inspectionPanel.data=
 inspectionPanel.metadata=
+link.associate=
+link.associationMethod=
+link.export=
+link.fileExplorer=
+link.firstStep=
+link.inspectionPanel=
+link.inspectionPanel.associations=
+link.inspectionPanel.data=
+link.inspectionPanel.metadata=
+link.metadataMethod=
+link.schemaPane=
+link.secondStep=
+link.templatingSystem=
 metadataMethod=
-schemapane=
+schemaPane=
 secondStep=
 tooltip.associate=
 tooltip.associationMethod=
 tooltip.export=
 tooltip.fileExplorer=
 tooltip.firstStep=
-tooltip.inspectionpane=
+tooltip.inspectionPanel=
 tooltip.inspectionPanel.associations=
 tooltip.inspectionPanel.data=
 tooltip.inspectionPanel.metadata=
 tooltip.metadataMethod=
-tooltip.schemapane=
+tooltip.schemaPane=
 tooltip.secondStep=
