--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -227,6 +227,9 @@ CreationModalProcessing.errorMessagesStopped.header=Error messages hidden
 CreationModalProcessing.errorMessagesStopped.content=Due to the large number of error messages, subsequent messages will not be displayed.\
 \
 Please check the application's log file to see all the error messages.
+help=
+menu=
+Main.helpPage=
 
 
 
