WIP: Adding support to new templates

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -8,7 +8,7 @@ producer= RODA-in
 #########################################################
 # EAD
 metadata.templates=ead,ead3,dc,eadDGLAB
-metadata.template.ead.file=ead2002.xml
+metadata.template.ead.file=ead2002.xml.hbs
 metadata.template.ead.title=EAD 2002
 metadata.template.ead.type=ead2002
 # EAD 3
