--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -6,38 +6,45 @@ producer= RODA-in
 #########################################################
 # Metadata templates                                    #
 #########################################################
+metadata.templates=ead2002,dc,keyvalue
 # EAD
-metadata.templates=ead,ead3,dc,eadDGLAB
-metadata.template.ead.file=ead2002.xml.hbs
-metadata.template.ead.title=EAD 2002
-metadata.template.ead.type=ead2002
-# EAD 3
-metadata.template.ead3.file=ead3.xml
-metadata.template.ead3.title=EAD 3
-metadata.template.ead3.type=ead3
+metadata.template.ead2002.file=ead2002.xml.hbs
+metadata.template.ead2002.title=EAD 2002
+metadata.template.ead2002.type=ead2002
 # Dublin Core
-metadata.template.dc.file=dc.xml
+metadata.template.dc.file=dc.xml.hbs
 metadata.template.dc.title=Dublin Core
 metadata.template.dc.type=dc
-# EAD 2002 DGLAB
-metadata.template.eadDGLAB.file=ead2002DGLAB.xml
-metadata.template.eadDGLAB.title=EAD DGLAB
-metadata.template.eadDGLAB.type=ead2002
+# KEY VALUE
+metadata.template.keyvalue.file=key-value.xml.hbs
+metadata.template.keyvalue.title=Key-Value
+metadata.template.keyvalue.type=keyvalue
 #########################################################
 # Metadata types                                        #
 #########################################################
-metadata.types=ead2002,ead3,dc,keyvalue
+metadata.types=ead2002,dc,keyvalue
 metadata.type.ead2002.title=EAD 2002
 metadata.type.ead2002.value=EAD
 metadata.type.ead2002.version=2002
 metadata.type.ead2002.schema=ead2002.xsd
-metadata.type.ead3.title=EAD 3
-metadata.type.ead3.value=EAD
-metadata.type.ead3.version=3
-metadata.type.ead3.schema=ead3.xsd
 metadata.type.dc.title=Dublin Core
 metadata.type.dc.value=DC
 metadata.type.dc.version=SimpleDC20021212
 metadata.type.dc.schema=dc.xsd
 metadata.type.keyvalue.title=Key-Value
 metadata.type.keyvalue.value=key-value
+metadata.type.keyvalue.schema=key-value.xsd
+
+#########################################################
+# Icons                                                 #
+#########################################################
+# EAD 2002 LEVELS
+levels.icon.fonds = \uf1ad
+levels.icon.subfonds = \uf1ad
+levels.icon.collection = \uf0c9
+levels.icon.series = \uf03a
+levels.icon.subseries = \uf03a
+levels.icon.recordgrp = \uf146
+levels.icon.subgrp = \uf03a
+levels.icon.file = \uf07b
+levels.icon.item = \uf15b
