--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -42,9 +42,11 @@ metadata.type.keyvalue.schema=key-value.xsd
 levels.icon.fonds = \uf1ad
 levels.icon.subfonds = \uf1ad
 levels.icon.collection = \uf0c9
-levels.icon.series = \uf03a
-levels.icon.subseries = \uf03a
-levels.icon.recordgrp = \uf146
-levels.icon.subgrp = \uf03a
+levels.icon.series = \uf0c9
+levels.icon.subseries = \uf0c9
+levels.icon.recordgrp = \uf0c9
+levels.icon.subgrp = \uf0c9
 levels.icon.file = \uf07b
 levels.icon.item = \uf15b
+
+levels.internal.icon.default = \uf15b
