WIP: Code refactoring

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -49,4 +49,9 @@ levels.icon.subgrp = \uf0c9
 levels.icon.file = \uf07b
 levels.icon.item = \uf15b
 
-levels.internal.icon.default = \uf15b
+levels.icon.internal.default = \uf15b
+levels.icon.internal.item = \uf15b
+levels.icon.internal.file = \uf07b
+levels.icon.internal.series = \uf0c9
+levels.icon.internal.fonds = \uf1ad
+
