WIP: Code refactoring

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -50,8 +50,8 @@ levels.icon.file = \uf07b
 levels.icon.item = \uf15b
 
 levels.icon.internal.default = \uf15b
-levels.icon.internal.item = \uf15b
-levels.icon.internal.file = \uf07b
-levels.icon.internal.series = \uf0c9
-levels.icon.internal.fonds = \uf1ad
+levels.icon.internal.itemLevel = \uf15b
+levels.icon.internal.fileLevel = \uf07b
+levels.icon.internal.aggregationLevel = \uf0c9
+levels.icon.internal.topLevel = \uf1ad
 
