--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -24,15 +24,15 @@ metadata.template.keyvalue.type=keyvalue
 #########################################################
 metadata.types=ead2002,dc,keyvalue
 metadata.type.ead2002.title=EAD 2002
-metadata.type.ead2002.value=EAD
+metadata.type.ead2002.value=ead2002
 metadata.type.ead2002.version=2002
 metadata.type.ead2002.schema=ead2002.xsd
 metadata.type.dc.title=Dublin Core
-metadata.type.dc.value=DC
+metadata.type.dc.value=dc
 metadata.type.dc.version=SimpleDC20021212
 metadata.type.dc.schema=dc.xsd
 metadata.type.keyvalue.title=Key-Value
-metadata.type.keyvalue.value=key-value
+metadata.type.keyvalue.value=keyvalue
 metadata.type.keyvalue.schema=key-value.xsd
 
 #########################################################
