SIP Creation report updated Removed horizontal scroll from TextArea on forms Minor fixes

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -3,37 +3,33 @@
 #########################################################
 creator= RODA-in
 producer= RODA-in
+
 #########################################################
 # Metadata templates                                    #
 #########################################################
 metadata.templates=ead2002,dc,keyvalue
-# EAD
-metadata.template.ead2002.file=ead2002.xml.hbs
-metadata.template.ead2002.title=EAD 2002
-metadata.template.ead2002.type=ead2002
-# Dublin Core
-metadata.template.dc.file=dc.xml.hbs
-metadata.template.dc.title=Dublin Core
-metadata.template.dc.type=dc
-# KEY VALUE
-metadata.template.keyvalue.file=key-value.xml.hbs
-metadata.template.keyvalue.title=Key-Value
-metadata.template.keyvalue.type=keyvalue
+
 #########################################################
 # Metadata types                                        #
 #########################################################
 metadata.types=ead2002,dc,keyvalue
-metadata.type.ead2002.title=EAD 2002
-metadata.type.ead2002.value=ead2002
-metadata.type.ead2002.version=2002
-metadata.type.ead2002.schema=ead2002.xsd
-metadata.type.dc.title=Dublin Core
-metadata.type.dc.value=dc
-metadata.type.dc.version=SimpleDC20021212
-metadata.type.dc.schema=dc.xsd
-metadata.type.keyvalue.title=Key-Value
-metadata.type.keyvalue.value=keyvalue
-metadata.type.keyvalue.schema=key-value.xsd
+
+#########################################################
+# Metadata definition                                   #
+#########################################################
+metadata.ead2002.template=ead2002.xml.hbs
+metadata.ead2002.title=EAD 2002
+metadata.ead2002.version=2002
+metadata.ead2002.schema=ead2002.xsd
+
+metadata.dc.template=dc.xml.hbs
+metadata.dc.title=Dublin Core
+metadata.dc.version=SimpleDC20021212
+metadata.dc.schema=dc.xsd
+
+metadata.keyvalue.template=key-value.xml.hbs
+metadata.keyvalue.title=Key-Value
+metadata.keyvalue.schema=key-value.xsd
 
 #########################################################
 # Icons                                                 #
