--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -19,17 +19,32 @@ metadata.types=ead2002,dc,keyvalue
 #########################################################
 metadata.ead2002.template=ead2002.xml.hbs
 metadata.ead2002.title=EAD 2002
+metadata.ead2002.type=ead
 metadata.ead2002.version=2002
 metadata.ead2002.schema=ead2002.xsd
+metadata.ead2002.itemLevel = item
+metadata.ead2002.fileLevel = file
+metadata.ead2002.aggregationLevel = series
+metadata.ead2002.topLevel = fonds
 
 metadata.dc.template=dc.xml.hbs
 metadata.dc.title=Dublin Core
+metadata.dc.type=dc
 metadata.dc.version=SimpleDC20021212
 metadata.dc.schema=dc.xsd
+metadata.dc.itemLevel = item
+metadata.dc.fileLevel = file
+metadata.dc.aggregationLevel = series
+metadata.dc.topLevel = fonds
 
 metadata.keyvalue.template=key-value.xml.hbs
+metadata.keyvalue.type=key-value
 metadata.keyvalue.title=Key-Value
 metadata.keyvalue.schema=key-value.xsd
+metadata.keyvalue.itemLevel = item
+metadata.keyvalue.fileLevel = file
+metadata.keyvalue.aggregationLevel = series
+metadata.keyvalue.topLevel = fonds
 
 #########################################################
 # Icons                                                 #
