Updated IPType translations

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -185,12 +185,15 @@ Footer.memory=Memory usage: %s of %s
 type=Type
 metadata.repository=Repository
 metadata.embargoTime=Embargo Time
+
 IPContentType.ERMS=Electronic Resource Management System
-IPContentType.RDBMS=Relational Database Management System
-IPContentType.SMURF=Semantically Marked Up Record Format
-InspectionPane.IPType=Package type
+IPContentType.RDB=Relational Database Management System
+IPContentType.GEODATA=Geographical data
+IPContentType.SFSB=SFSB
 IPContentType.MIXED=Mixed
 IPContentType.OTHER=Other
+
+InspectionPane.IPType=Package type
 metadata.descDate=Description creation date
 InspectionPane.sipTypeTooltip=IP type
 genericError.title=Oops! An error has occurred.
@@ -231,7 +234,4 @@ Please check the application's log file to see all the error messages.
 help=
 menu=
 Main.helpPage=
-
-
-
 
