Fixed bug related to removing all collapsed levels

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -183,6 +183,7 @@ items=items
 folders=folder(s)
 Footer.memory=Memory usage: %s of %s
 type=Type
+version=Version
 metadata.repository=Repository
 metadata.embargoTime=Embargo Time
 
