--- a/src/main/resources/properties/.app.properties
+++ b/src/main/resources/properties/.app.properties
@@ -3,7 +3,7 @@
 #########################################################
 # Regular expressions separated by ',' to ignore files.
 # These files won't appear in the explorer and won't be included in the SIPs
-app.ignoredFiles=Thumbs.db,\\.DS_Store,\\..*
+app.ignoredFiles=
 app.helpEnabled=true
 lastClassificationScheme=
 # Force a locale, using the JVM default locale if not defined here
