--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -37,7 +37,7 @@ CreationModalProcessing.remaining=Remaining time
 CreationModalProcessing.subtitle=Created %d of %d (%d%%)
 FileExplorerPane.chooseDir=Choose folder
 FileExplorerPane.help.title=Choose the folders\nthat contain your files
-FileExplorerPane.title=Source File Explorer
+FileExplorerPane.title=1 - File Explorer
 InspectionPane.help.ruleList=Associate files/directories \nto a description object \nto create a new association
 InspectionPane.help.title=Select an item from \nthe classification scheme\nto inspect it
 InspectionPane.metadata=Metadata
@@ -78,7 +78,7 @@ SchemaPane.add=Add
 SchemaPane.help.title=Load your\nclassification scheme
 SchemaPane.newNode=New node
 SchemaPane.remove=Remove
-SchemaPane.title=Classification Scheme
+SchemaPane.title=2 - Information Packages
 SchemaPane.create=new classification scheme
 SchemaPane.load=Load a classification scheme
 SchemaPane.or=or create a
@@ -105,7 +105,7 @@ metadata.diffFolder.title=Load from one directory
 metadata.diffFolder.description=Use this option to select one directory where all the metadata files to include in the SIPs can be found. The association between metadata files and SIPs is done through the file name (ignoring the extension). In the cases where no association can be made, the SIP will not contain metadata.
 metadata.template.title=Create new metadata from a template
 metadata.template.description=Use this option to create metadata from a predefined model. The associated metadata for each SIP will be the same. After the SIP creation, the user should edit the metadata according to the data associated to each packet.
-export=Export
+export=Create SIP(s)
 SchemaPane.dragHelp=Drop files/directories here
 SchemaPane.confirmRemove.header=Are you sure you want to remove this level?
 SchemaPane.confirmRemove.content=This action will remove all the selected description levels.
@@ -141,7 +141,7 @@ FileExplorerPane.removeFolder=Remove folder
 data=Data
 InspectionPane.addRepresentation=Add representation
 documentation=Documentation
-InspectionPane.docsHelp.title=Drop files/folders here\nto add documentation
+InspectionPane.docsHelp.title=Drop files/folders from File Explorer \nto add documentation
 InspectionPane.onDropDocs=Add documentation
 SimpleSipCreator.documentation=Adding documentation
 SimpleSipCreator.initZIP=Initializing zip file
@@ -175,7 +175,7 @@ metadata.language=Language
 metadata.description=Description
 metadata.rights=Rights
 metadata.level=Description level
-InspectionPane.title=Inspection
+InspectionPane.title=3 - Inspector
 InspectionPane.changeTemplate.title=Override template
 InspectionPane.changeTemplate.header=Do you want to override the template?
 InspectionPane.changeTemplate.content=You will no longer be able to use the form to edit this metadata file.
