ID creation moved to Utils.java ID prefix set in config.properties

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -5,6 +5,11 @@ creator= RODA-in
 producer= RODA-in
 
 #########################################################
+# ID prefix                                             #
+#########################################################
+idPrefix=uuid-
+
+#########################################################
 # Metadata templates                                    #
 #########################################################
 metadata.templates=ead2002,dc,keyvalue
