--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -37,7 +37,7 @@ CreationModalProcessing.remaining=Remaining time
 CreationModalProcessing.subtitle=Created %d of %d (%d%%)
 FileExplorerPane.chooseDir=Choose folder
 FileExplorerPane.help.title=Choose the folders\nthat contain your files
-FileExplorerPane.title=1 - File Explorer
+FileExplorerPane.title=1: File Explorer
 InspectionPane.help.ruleList=Associate files/directories \nto a description object \nto create a new association
 InspectionPane.help.title=Select an item from \nthe classification scheme\nto inspect it
 InspectionPane.metadata=Metadata
@@ -78,7 +78,7 @@ SchemaPane.add=Add
 SchemaPane.help.title=Load your\nclassification scheme
 SchemaPane.newNode=New node
 SchemaPane.remove=Remove
-SchemaPane.title=2 - Information Packages
+SchemaPane.title=2: Information Packages
 SchemaPane.create=new classification scheme
 SchemaPane.load=Load a classification scheme
 SchemaPane.or=or create a
@@ -175,7 +175,7 @@ metadata.language=Language
 metadata.description=Description
 metadata.rights=Rights
 metadata.level=Description level
-InspectionPane.title=3 - Inspector
+InspectionPane.title=3: Inspector
 InspectionPane.changeTemplate.title=Override template
 InspectionPane.changeTemplate.header=Do you want to override the template?
 InspectionPane.changeTemplate.content=You will no longer be able to use the form to edit this metadata file.
