Added version to key-value metadata

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -44,6 +44,7 @@ metadata.dc.topLevel = fonds
 
 metadata.keyvalue.template=key-value.xml.hbs
 metadata.keyvalue.type=key-value
+metadata.keyvalue.version=1.0
 metadata.keyvalue.title=Key-Value
 metadata.keyvalue.schema=key-value.xsd
 metadata.keyvalue.itemLevel = item
