Added limit to multiple edit

--- a/src/main/resources/properties/.app.properties
+++ b/src/main/resources/properties/.app.properties
@@ -5,6 +5,7 @@
 # These files won't appear in the explorer and won't be included in the SIPs
 app.ignoredFiles=Thumbs.db,\\.DS_Store,\\..*
 app.helpEnabled=true
+app.multipleEdit.max=100
 lastClassificationScheme=
 # Force a locale, using the JVM default locale if not defined here
 # app.language = en
