--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -247,3 +247,7 @@ Main.helpPage=
 errorValidatingMetadata = The file is not valid according to the schema.
 
 ExportBox.title=4. Final step
+
+SchemaPane.tooManySelected.header=Too many items selected
+SchemaPane.tooManySelected.content=Multiple edition not available
+SchemaPane.tooManySelected.title=Too many items selected
