--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -14,6 +14,7 @@ file=\ file
 filechooser.title=Please choose a file
 files=\ files
 ignore=Ignore
+refresh=Refresh
 load=Load
 remove=Remove
 start=Start
