documentation now has its own descriptive metadata, some minor fixes

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -12,12 +12,12 @@ idPrefix=uuid-
 #########################################################
 # Metadata templates                                    #
 #########################################################
-metadata.templates=ead2002,dc,keyvalue
+metadata.templates=ead2002,dc,keyvalue,documentation
 
 #########################################################
 # Metadata types                                        #
 #########################################################
-metadata.types=ead2002,dc,keyvalue
+metadata.types=ead2002,dc,keyvalue,documentation
 
 #########################################################
 # Metadata definition                                   #
@@ -51,6 +51,17 @@ metadata.keyvalue.itemLevel = item
 metadata.keyvalue.fileLevel = file
 metadata.keyvalue.aggregationLevel = series
 metadata.keyvalue.topLevel = fonds
+
+metadata.documentation.template=documentation.xml.hbs
+metadata.documentation.title=Documentation
+metadata.documentation.tags=documentation
+metadata.documentation.type=ead
+metadata.documentation.version=2002
+metadata.documentation.schema=ead2002.xsd
+metadata.documentation.itemLevel = item
+metadata.documentation.fileLevel = file
+metadata.documentation.aggregationLevel = series
+metadata.documentation.topLevel = fonds
 
 #########################################################
 # Icons                                                 #
