--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,35 @@
 	<artifactId>rodain</artifactId>
 	<version>2.0.0-beta.5</version>
 
+	<prerequisites>
+		<maven>3.0</maven>
+	</prerequisites>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<version.java>1.8</version.java>
+		<misc.version.java>1.8</misc.version.java>
 		<projectLocalRepository>${project.basedir}/repository</projectLocalRepository>
+		<!-- plugins versions -->
+		<plug.version.launch4j>1.7.16</plug.version.launch4j>
+		<plug.version.git-commit>2.2.2</plug.version.git-commit>
+		<plug.version.surefire>2.19.1</plug.version.surefire>
+		<plug.version.compiler>3.6.1</plug.version.compiler>
+		<plug.version.assembly>3.0.0</plug.version.assembly>
+		<plug.version.clean>3.0.0</plug.version.clean>
+		<plug.version.deploy>2.8.2</plug.version.deploy>
+		<plug.version.install>2.5.2</plug.version.install>
+		<plug.version.jar>3.0.2</plug.version.jar>
+		<plug.version.resources>3.0.2</plug.version.resources>
+		<plug.version.site>3.6</plug.version.site>
+		<!-- dependencies versions -->
+		<dep.version.commons-ip>1.0.0-alpha29</dep.version.commons-ip>
+		<dep.version.sf-test>4.0.6-alpha</dep.version.sf-test>
+		<dep.version.jackson>2.8.7</dep.version.jackson>
+		<dep.version.slf4j>1.7.25</dep.version.slf4j>
+		<dep.version.logback>1.2.2</dep.version.logback>
+		<dep.version.richtextfx>0.7-M4</dep.version.richtextfx>
+		<dep.version.saxon>9.7.0-15</dep.version.saxon>
+		<dep.version.jcabi>0.18.1</dep.version.jcabi>
 	</properties>
 
 	<repositories>
@@ -33,15 +58,16 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
+				<version>${plug.version.compiler}</version>
 				<configuration>
-					<source>${version.java}</source>
-					<target>${version.java}</target>
+					<source>${misc.version.java}</source>
+					<target>${misc.version.java}</target>
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
+				<version>${plug.version.assembly}</version>
 				<configuration>
 					<finalName>rodain-app-${project.version}</finalName>
 					<attach>true</attach>
@@ -73,7 +99,7 @@
 			<plugin>
 				<groupId>com.akathist.maven.plugins.launch4j</groupId>
 				<artifactId>launch4j-maven-plugin</artifactId>
-				<version>1.7.8</version>
+				<version>${plug.version.launch4j}</version>
 				<executions>
 					<!-- GUI exe -->
 					<execution>
@@ -112,7 +138,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.17</version>
+				<version>${plug.version.surefire}</version>
 				<configuration>
 					<reuseForks>false</reuseForks>
 					<!--<systemPropertyVariables> -->
@@ -129,7 +155,7 @@
 			<plugin>
 				<groupId>pl.project13.maven</groupId>
 				<artifactId>git-commit-id-plugin</artifactId>
-				<version>2.2.1</version>
+				<version>${plug.version.git-commit}</version>
 				<executions>
 					<execution>
 						<goals>
@@ -149,7 +175,30 @@
 					<format>properties</format>
 				</configuration>
 			</plugin>
-
+			<plugin>
+				<artifactId>maven-clean-plugin</artifactId>
+				<version>${plug.version.clean}</version>
+			</plugin>
+			<plugin>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>${plug.version.deploy}</version>
+			</plugin>
+			<plugin>
+				<artifactId>maven-install-plugin</artifactId>
+				<version>${plug.version.install}</version>
+			</plugin>
+			<plugin>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>${plug.version.jar}</version>
+			</plugin>
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>${plug.version.resources}</version>
+			</plugin>
+			<plugin>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>${plug.version.site}</version>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -169,32 +218,32 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.7.3</version>
+			<version>${dep.version.jackson}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.jcabi</groupId>
 			<artifactId>jcabi-xml</artifactId>
-			<version>0.17.2</version>
+			<version>${dep.version.jcabi}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.7.24</version>
+			<version>${dep.version.slf4j}</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>1.2.1</version>
+			<version>${dep.version.logback}</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-core</artifactId>
-			<version>1.2.1</version>
+			<version>${dep.version.logback}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.roda-project</groupId>
 			<artifactId>commons-ip</artifactId>
-			<version>1.0.0-alpha29</version>
+			<version>${dep.version.commons-ip}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.jknack</groupId>
@@ -204,7 +253,7 @@
 		<dependency>
 			<groupId>org.fxmisc.richtext</groupId>
 			<artifactId>richtextfx</artifactId>
-			<version>0.7-M3</version>
+			<version>${dep.version.richtextfx}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-configuration</groupId>
@@ -224,7 +273,7 @@
 		<dependency>
 			<groupId>net.sf.saxon</groupId>
 			<artifactId>Saxon-HE</artifactId>
-			<version>9.6.0-7</version>
+			<version>${dep.version.saxon}</version>
 		</dependency>
 		<dependency>
 			<groupId>xmlunit</groupId>
@@ -241,13 +290,13 @@
 		<dependency>
 			<groupId>org.testfx</groupId>
 			<artifactId>testfx-core</artifactId>
-			<version>4.0.5-alpha</version>
+			<version>${dep.version.sf-test}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.testfx</groupId>
 			<artifactId>testfx-junit</artifactId>
-			<version>4.0.5-alpha</version>
+			<version>${dep.version.sf-test}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
