--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -83,3 +83,200 @@ levels.icon.internal.fileLevel = \uf07b
 levels.icon.internal.aggregationLevel = \uf0c9
 levels.icon.internal.topLevel = \uf1ad
 
+#########################################################
+# METS Header form                                      #
+#########################################################
+
+metsheader.EARK.fields = status,altrecords,agents
+
+metsheader.EARK.field.status.type = recordstatus
+metsheader.EARK.field.status.label = i18n.metsheader.EARK.field.status.label
+metsheader.EARK.field.status.description = i18n.metsheader.EARK.field.status.description
+metsheader.EARK.field.status.amount.min = 0
+metsheader.EARK.field.status.amount.max = 1
+
+metsheader.EARK.field.altrecords.type = altrecordid
+metsheader.EARK.field.altrecords.label = i18n.metsheader.EARK.field.altrecords.label
+metsheader.EARK.field.altrecords.description = i18n.metsheader.EARK.field.altrecords.description
+metsheader.EARK.field.altrecords.amount.min = 0
+metsheader.EARK.field.altrecords.amount.max = N
+metsheader.EARK.field.altrecords.attr.type.label = i18n.metsheader.EARK.field.altrecords.attr.type.label
+metsheader.EARK.field.altrecords.attr.type.description = i18n.metsheader.EARK.field.altrecords.attr.type.description
+
+metsheader.EARK.field.agents.type = agent
+metsheader.EARK.field.agents.amount.min = 0
+metsheader.EARK.field.agents.amount.max = N
+metsheader.EARK.field.agents.attr.name.label = i18n.metsheader.EARK.field.agents.attr.name.label
+metsheader.EARK.field.agents.attr.name.description = i18n.metsheader.EARK.field.agents.attr.name.description
+metsheader.EARK.field.agents.attr.note.label = i18n.metsheader.EARK.field.agents.attr.note.label
+metsheader.EARK.field.agents.attr.note.description = i18n.metsheader.EARK.field.agents.attr.note.description
+metsheader.EARK.field.agents.attr.note.mandatory = false
+metsheader.EARK.field.agents.attr.role.label = i18n.metsheader.EARK.field.agents.attr.role.label
+metsheader.EARK.field.agents.attr.role.description = i18n.metsheader.EARK.field.agents.attr.role.description
+metsheader.EARK.field.agents.attr.type.label = i18n.metsheader.EARK.field.agents.attr.type.label
+metsheader.EARK.field.agents.attr.type.description = i18n.metsheader.EARK.field.agents.attr.type.description
+metsheader.EARK.field.agents.attr.othertype.label = i18n.metsheader.EARK.field.agents.attr.othertype.label
+metsheader.EARK.field.agents.attr.othertype.description = i18n.metsheader.EARK.field.agents.attr.othertype.description
+
+
+metsheader.HUNGARIAN.fields = recordStatus,deliveryType,deliverySpecification,submissionAgreement,previousSubmissionAgreement,dataSubmissionSession,packageNumber,referenceCode,previousReferenceCode,accessRestrict,appraisal,agent1,agent2,agent3,agent4,agent5,agent6,agent7
+
+metsheader.HUNGARIAN.field.recordStatus.type = recordstatus
+metsheader.HUNGARIAN.field.recordStatus.label = i18n.metsheader.HUNGARIAN.recordStatus.label
+metsheader.HUNGARIAN.field.recordStatus.description = i18n.metsheader.HUNGARIAN.recordStatus.description
+metsheader.HUNGARIAN.field.recordStatus.amount.min = 0
+metsheader.HUNGARIAN.field.recordStatus.amount.max = 1
+
+metsheader.HUNGARIAN.field.deliveryType.type = altrecordid
+metsheader.HUNGARIAN.field.deliveryType.label = i18n.metsheader.HUNGARIAN.deliveryType.label
+metsheader.HUNGARIAN.field.deliveryType.description = i18n.metsheader.HUNGARIAN.deliveryType.description
+metsheader.HUNGARIAN.field.deliveryType.amount.min = 1
+metsheader.HUNGARIAN.field.deliveryType.amount.max = 1
+metsheader.HUNGARIAN.field.deliveryType.attr.type.value = DELIVERYTYPE
+metsheader.HUNGARIAN.field.deliveryType.combo = Tanúsított iktatás
+metsheader.HUNGARIAN.field.deliveryType.combo = Strukturált iktatás
+metsheader.HUNGARIAN.field.deliveryType.combo = Strukturált iratnyilvántartás
+metsheader.HUNGARIAN.field.deliveryType.combo = Struktúrálatlan
+
+metsheader.HUNGARIAN.field.deliverySpecification.type = altrecordid
+metsheader.HUNGARIAN.field.deliverySpecification.label = i18n.metsheader.HUNGARIAN.deliverySpecification.label
+metsheader.HUNGARIAN.field.deliverySpecification.description = i18n.metsheader.HUNGARIAN.deliverySpecification.description
+metsheader.HUNGARIAN.field.deliverySpecification.amount.min = 1
+metsheader.HUNGARIAN.field.deliverySpecification.amount.max = 1
+metsheader.HUNGARIAN.field.deliverySpecification.attr.type.value = DELIVERYSPECIFICATION
+
+metsheader.HUNGARIAN.field.submissionAgreement.type = altrecordid
+metsheader.HUNGARIAN.field.submissionAgreement.label = i18n.metsheader.HUNGARIAN.submissionAgreement.label
+metsheader.HUNGARIAN.field.submissionAgreement.description = i18n.metsheader.HUNGARIAN.submissionAgreement.description
+metsheader.HUNGARIAN.field.submissionAgreement.amount.min = 1
+metsheader.HUNGARIAN.field.submissionAgreement.amount.max = 1
+metsheader.HUNGARIAN.field.submissionAgreement.attr.type.value = SUBMISSIONAGREEMENT
+
+metsheader.HUNGARIAN.field.previousSubmissionAgreement.type = altrecordid
+metsheader.HUNGARIAN.field.previousSubmissionAgreement.label = i18n.metsheader.HUNGARIAN.previousSubmissionAgreement.label
+metsheader.HUNGARIAN.field.previousSubmissionAgreement.description = i18n.metsheader.HUNGARIAN.previousSubmissionAgreement.description
+metsheader.HUNGARIAN.field.previousSubmissionAgreement.amount.min = 0
+metsheader.HUNGARIAN.field.previousSubmissionAgreement.amount.max = N
+metsheader.HUNGARIAN.field.previousSubmissionAgreement.attr.type.value = PREVIOUSSUBMISSIONAGREEMENT
+
+metsheader.HUNGARIAN.field.dataSubmissionSession.type = altrecordid
+metsheader.HUNGARIAN.field.dataSubmissionSession.label = i18n.metsheader.HUNGARIAN.dataSubmissionSession.label
+metsheader.HUNGARIAN.field.dataSubmissionSession.description = i18n.metsheader.HUNGARIAN.dataSubmissionSession.description
+metsheader.HUNGARIAN.field.dataSubmissionSession.amount.min = 0
+metsheader.HUNGARIAN.field.dataSubmissionSession.amount.max = 1
+metsheader.HUNGARIAN.field.dataSubmissionSession.attr.type.value = DATASUBMISSIONSESSION
+
+metsheader.HUNGARIAN.field.packageNumber.type = altrecordid
+metsheader.HUNGARIAN.field.packageNumber.label = i18n.metsheader.HUNGARIAN.packageNumber.label
+metsheader.HUNGARIAN.field.packageNumber.description = i18n.metsheader.HUNGARIAN.packageNumber.description
+metsheader.HUNGARIAN.field.packageNumber.amount.min = 0
+metsheader.HUNGARIAN.field.packageNumber.amount.max = 1
+metsheader.HUNGARIAN.field.packageNumber.attr.type.value = PACKAGENUMBER
+
+metsheader.HUNGARIAN.field.referenceCode.type = altrecordid
+metsheader.HUNGARIAN.field.referenceCode.label = i18n.metsheader.HUNGARIAN.referenceCode.label
+metsheader.HUNGARIAN.field.referenceCode.description = i18n.metsheader.HUNGARIAN.referenceCode.description
+metsheader.HUNGARIAN.field.referenceCode.amount.min = 0
+metsheader.HUNGARIAN.field.referenceCode.amount.max = 1
+metsheader.HUNGARIAN.field.referenceCode.attr.type.value = REFERENCE CODE
+
+metsheader.HUNGARIAN.field.previousReferenceCode.type = altrecordid
+metsheader.HUNGARIAN.field.previousReferenceCode.label = i18n.metsheader.HUNGARIAN.previousReferenceCode.label
+metsheader.HUNGARIAN.field.previousReferenceCode.description = i18n.metsheader.HUNGARIAN.previousReferenceCode.description
+metsheader.HUNGARIAN.field.previousReferenceCode.amount.min = 0
+metsheader.HUNGARIAN.field.previousReferenceCode.amount.max = N
+metsheader.HUNGARIAN.field.previousReferenceCode.attr.type.value = PREVIOUS REFERENCE CODE
+
+metsheader.HUNGARIAN.field.accessRestrict.type = altrecordid
+metsheader.HUNGARIAN.field.accessRestrict.label = i18n.metsheader.HUNGARIAN.accessRestrict.label
+metsheader.HUNGARIAN.field.accessRestrict.description = i18n.metsheader.HUNGARIAN.accessRestrict.description
+metsheader.HUNGARIAN.field.accessRestrict.amount.min = 0
+metsheader.HUNGARIAN.field.accessRestrict.amount.max = 1
+metsheader.HUNGARIAN.field.accessRestrict.attr.type.value = ACCESSRESTRICT
+
+metsheader.HUNGARIAN.field.appraisal.type = altrecordid
+metsheader.HUNGARIAN.field.appraisal.label = i18n.metsheader.HUNGARIAN.appraisal.label
+metsheader.HUNGARIAN.field.appraisal.description = i18n.metsheader.HUNGARIAN.appraisal.description
+metsheader.HUNGARIAN.field.appraisal.amount.min = 0
+metsheader.HUNGARIAN.field.appraisal.amount.max = 1
+metsheader.HUNGARIAN.field.appraisal.attr.type.value = Appraisal
+
+
+metsheader.HUNGARIAN.field.agent1.type = agent
+metsheader.HUNGARIAN.field.agent1.amount.min = 1
+metsheader.HUNGARIAN.field.agent1.amount.max = 1
+metsheader.HUNGARIAN.field.agent1.attr.name.label = i18n.metsheader.HUNGARIAN.agent1.attr.name.label
+metsheader.HUNGARIAN.field.agent1.attr.name.description = i18n.metsheader.HUNGARIAN.agent1.attr.name.description
+metsheader.HUNGARIAN.field.agent1.attr.note.label = i18n.metsheader.HUNGARIAN.agent1.attr.note.label
+metsheader.HUNGARIAN.field.agent1.attr.note.description = i18n.metsheader.HUNGARIAN.agent1.attr.note.description
+metsheader.HUNGARIAN.field.agent1.attr.note.mandatory = true
+metsheader.HUNGARIAN.field.agent1.attr.role.value = ARCHIVIST
+metsheader.HUNGARIAN.field.agent1.attr.type.value = ORGANIZATION
+
+metsheader.HUNGARIAN.field.agent2.type = agent
+metsheader.HUNGARIAN.field.agent2.amount.min = 1
+metsheader.HUNGARIAN.field.agent2.amount.max = 1
+metsheader.HUNGARIAN.field.agent2.attr.name.label = i18n.metsheader.HUNGARIAN.agent2.attr.name.label
+metsheader.HUNGARIAN.field.agent2.attr.name.description = i18n.metsheader.HUNGARIAN.agent2.attr.name.description
+metsheader.HUNGARIAN.field.agent2.attr.note.label = i18n.metsheader.HUNGARIAN.agent2.attr.note.label
+metsheader.HUNGARIAN.field.agent2.attr.note.description = i18n.metsheader.HUNGARIAN.agent2.attr.note.description
+metsheader.HUNGARIAN.field.agent2.attr.note.mandatory = false
+metsheader.HUNGARIAN.field.agent2.attr.role.value = ARCHIVIST
+metsheader.HUNGARIAN.field.agent2.attr.type.value = OTHER
+metsheader.HUNGARIAN.field.agent2.attr.othertype.value = SOFTWARE
+
+metsheader.HUNGARIAN.field.agent3.type = agent
+metsheader.HUNGARIAN.field.agent3.amount.min = 1
+metsheader.HUNGARIAN.field.agent3.amount.max = 1
+metsheader.HUNGARIAN.field.agent3.attr.name.label = i18n.metsheader.HUNGARIAN.agent3.attr.name.label
+metsheader.HUNGARIAN.field.agent3.attr.name.description = i18n.metsheader.HUNGARIAN.agent3.attr.name.description
+metsheader.HUNGARIAN.field.agent3.attr.note.label = i18n.metsheader.HUNGARIAN.agent3.attr.note.label
+metsheader.HUNGARIAN.field.agent3.attr.note.description = i18n.metsheader.HUNGARIAN.agent3.attr.note.description
+metsheader.HUNGARIAN.field.agent3.attr.note.mandatory = false
+metsheader.HUNGARIAN.field.agent3.attr.role.value = CREATOR
+metsheader.HUNGARIAN.field.agent3.attr.type.value = ORGANIZATION
+
+metsheader.HUNGARIAN.field.agent4.type = agent
+metsheader.HUNGARIAN.field.agent4.amount.min = 0
+metsheader.HUNGARIAN.field.agent4.amount.max = N
+metsheader.HUNGARIAN.field.agent4.attr.name.label = i18n.metsheader.HUNGARIAN.agent4.attr.name.label
+metsheader.HUNGARIAN.field.agent4.attr.name.description = i18n.metsheader.HUNGARIAN.agent4.attr.name.description
+metsheader.HUNGARIAN.field.agent4.attr.note.label = i18n.metsheader.HUNGARIAN.agent4.attr.note.label
+metsheader.HUNGARIAN.field.agent4.attr.note.description = i18n.metsheader.HUNGARIAN.agent4.attr.note.description
+metsheader.HUNGARIAN.field.agent4.attr.note.mandatory = false
+metsheader.HUNGARIAN.field.agent4.attr.role.value = EDITOR
+metsheader.HUNGARIAN.field.agent4.attr.type.value = ORGANIZATION
+
+metsheader.HUNGARIAN.field.agent5.type = agent
+metsheader.HUNGARIAN.field.agent5.amount.min = 0
+metsheader.HUNGARIAN.field.agent5.amount.max = 1
+metsheader.HUNGARIAN.field.agent5.attr.name.label = i18n.metsheader.HUNGARIAN.agent5.attr.name.label
+metsheader.HUNGARIAN.field.agent5.attr.name.description = i18n.metsheader.HUNGARIAN.agent5.attr.name.description
+metsheader.HUNGARIAN.field.agent5.attr.note.label = i18n.metsheader.HUNGARIAN.agent5.attr.note.label
+metsheader.HUNGARIAN.field.agent5.attr.note.description = i18n.metsheader.HUNGARIAN.agent5.attr.note.description
+metsheader.HUNGARIAN.field.agent5.attr.note.mandatory = false
+metsheader.HUNGARIAN.field.agent5.attr.role.value = CREATOR
+metsheader.HUNGARIAN.field.agent5.attr.type.value = OTHER
+metsheader.HUNGARIAN.field.agent5.attr.othertype.value = SOFTWARE
+
+metsheader.HUNGARIAN.field.agent6.type = agent
+metsheader.HUNGARIAN.field.agent6.amount.min = 0
+metsheader.HUNGARIAN.field.agent6.amount.max = N
+metsheader.HUNGARIAN.field.agent6.attr.name.label = i18n.metsheader.HUNGARIAN.agent6.attr.name.label
+metsheader.HUNGARIAN.field.agent6.attr.name.description = i18n.metsheader.HUNGARIAN.agent6.attr.name.description
+metsheader.HUNGARIAN.field.agent6.attr.note.label = i18n.metsheader.HUNGARIAN.agent6.attr.note.label
+metsheader.HUNGARIAN.field.agent6.attr.note.description = i18n.metsheader.HUNGARIAN.agent6.attr.note.description
+metsheader.HUNGARIAN.field.agent6.attr.note.mandatory = false
+metsheader.HUNGARIAN.field.agent6.attr.role.value = CREATOR
+metsheader.HUNGARIAN.field.agent6.attr.type.value = INDIVIDUAL
+
+metsheader.HUNGARIAN.field.agent7.type = agent
+metsheader.HUNGARIAN.field.agent7.amount.min = 0
+metsheader.HUNGARIAN.field.agent7.amount.max = 1
+metsheader.HUNGARIAN.field.agent7.attr.name.label = i18n.metsheader.HUNGARIAN.agent7.attr.name.label
+metsheader.HUNGARIAN.field.agent7.attr.name.description = i18n.metsheader.HUNGARIAN.agent7.attr.name.description
+metsheader.HUNGARIAN.field.agent7.attr.note.label = i18n.metsheader.HUNGARIAN.agent7.attr.note.label
+metsheader.HUNGARIAN.field.agent7.attr.note.description = i18n.metsheader.HUNGARIAN.agent7.attr.note.description
+metsheader.HUNGARIAN.field.agent7.attr.note.mandatory = false
+metsheader.HUNGARIAN.field.agent7.attr.role.value = PRESERVATION
+metsheader.HUNGARIAN.field.agent7.attr.type.value = ORGANIZATION
