--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -52,6 +52,17 @@ metadata.keyvalue.fileLevel = file
 metadata.keyvalue.aggregationLevel = series
 metadata.keyvalue.topLevel = fonds
 
+metadata.documentation.template=documentation.xml.hbs
+metadata.documentation.title=Documentation
+metadata.documentation.tags=documentation
+metadata.documentation.type=ead
+metadata.documentation.version=2002
+metadata.documentation.schema=ead2002.xsd
+metadata.documentation.itemLevel = item
+metadata.documentation.fileLevel = file
+metadata.documentation.aggregationLevel = series
+metadata.documentation.topLevel = fonds
+
 #########################################################
 # Icons                                                 #
 #########################################################
