Disabled documentation support (cause there are related unsolved issues)

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -12,12 +12,12 @@ idPrefix=uuid-
 #########################################################
 # Metadata templates                                    #
 #########################################################
-metadata.templates=ead2002,dc,keyvalue,documentation
+metadata.templates=ead2002,dc,keyvalue
 
 #########################################################
 # Metadata types                                        #
 #########################################################
-metadata.types=ead2002,dc,keyvalue,documentation
+metadata.types=ead2002,dc,keyvalue
 
 #########################################################
 # Metadata definition                                   #
