--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -12,12 +12,12 @@ idPrefix=uuid-
 #########################################################
 # Metadata templates                                    #
 #########################################################
-metadata.templates=ead2002,dc,keyvalue
+metadata.templates=ead2002,dc,keyvalue,documentation
 
 #########################################################
 # Metadata types                                        #
 #########################################################
-metadata.types=ead2002,dc,keyvalue
+metadata.types=ead2002,dc,keyvalue,documentation
 
 #########################################################
 # Metadata definition                                   #
@@ -54,6 +54,7 @@ metadata.keyvalue.topLevel = fonds
 
 metadata.documentation.template=documentation.xml.hbs
 metadata.documentation.title=Documentation
+metadata.documentation.synchronized=false
 metadata.documentation.tags=documentation
 metadata.documentation.type=ead
 metadata.documentation.version=2002
