--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,15 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${plug.version.surefire}</version>
+				<executions>
+					<execution>
+						<id>default-test</id>
+						<phase>test</phase>
+						<goals>
+							<goal>test</goal>
+						</goals>
+					</execution>
+				</executions>
 				<configuration>
 					<reuseForks>false</reuseForks>
 					<!--<systemPropertyVariables> -->
@@ -298,6 +307,18 @@
 			<artifactId>testfx-junit</artifactId>
 			<version>${dep.version.sf-test}</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testfx</groupId>
+			<artifactId>testfx-legacy</artifactId>
+			<version>${dep.version.sf-test}</version>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>junit</groupId>
+					<artifactId>junit</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.jacoco</groupId>
