fixes #280 by changing the 'METS Header' translation

--- a/src/main/resources/properties/lang.properties
+++ b/src/main/resources/properties/lang.properties
@@ -39,7 +39,7 @@ CreationModalProcessing.impossibleEstimate=Impossible to estimate time
 CreationModalProcessing.remaining=Remaining time
 CreationModalProcessing.subtitle=Created %d of %d (%d%%)
 
-CreationModalMETSHeader.METSHeader=METS Header
+CreationModalMETSHeader.METSHeader=Package description
 
 RenameModalProcessing.renameRepresentation=Rename representation
 RenameModalProcessing.renameAlreadyExists=This representation name is already being used
