fixes #286, part 1, by not showing the transfer type field and making sure to always add it to the mets header with the specified constant value

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -130,7 +130,7 @@ metsheader.EARK.field.agents.attr.othertype.label = i18n.metsheader.EARK.field.a
 metsheader.EARK.field.agents.attr.othertype.description = i18n.metsheader.EARK.field.agents.attr.othertype.description
 
 
-metsheader.HUNGARIAN.fields = recordStatus,deliveryType,deliverySpecification,submissionAgreement,previousSubmissionAgreement,dataSubmissionSession,packageNumber,referenceCode,previousReferenceCode,accessRestrict,appraisal,agent1,agent2,agent3,agent4,agent5,agent6,agent7
+metsheader.HUNGARIAN.fields = recordStatus,deliverySpecification,submissionAgreement,previousSubmissionAgreement,dataSubmissionSession,packageNumber,referenceCode,previousReferenceCode,accessRestrict,appraisal,agent1,agent2,agent3,agent4,agent5,agent6,agent7
 
 metsheader.HUNGARIAN.type.recordstatus = i18n.metsheader.HUNGARIAN.type.recordstatus
 metsheader.HUNGARIAN.type.altrecordid = i18n.metsheader.HUNGARIAN.type.altrecordid
@@ -143,6 +143,7 @@ metsheader.HUNGARIAN.field.recordStatus.description = i18n.metsheader.HUNGARIAN.
 metsheader.HUNGARIAN.field.recordStatus.amount.min = 1
 metsheader.HUNGARIAN.field.recordStatus.amount.max = 1
 
+# removed field since its value is constant, see roda-in issue #286
 metsheader.HUNGARIAN.field.deliveryType.type = altrecordid
 metsheader.HUNGARIAN.field.deliveryType.title = i18n.metsheader.HUNGARIAN.field.deliveryType.title
 metsheader.HUNGARIAN.field.deliveryType.label = i18n.metsheader.HUNGARIAN.field.deliveryType.label
