fixes #286, part 2, by not showing the Transfer specification document field and making sure to always add it to the mets header with the specified constant value

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -130,7 +130,7 @@ metsheader.EARK.field.agents.attr.othertype.label = i18n.metsheader.EARK.field.a
 metsheader.EARK.field.agents.attr.othertype.description = i18n.metsheader.EARK.field.agents.attr.othertype.description
 
 
-metsheader.HUNGARIAN.fields = recordStatus,deliverySpecification,submissionAgreement,previousSubmissionAgreement,dataSubmissionSession,packageNumber,referenceCode,previousReferenceCode,accessRestrict,appraisal,agent1,agent2,agent3,agent4,agent5,agent6,agent7
+metsheader.HUNGARIAN.fields = recordStatus,submissionAgreement,previousSubmissionAgreement,dataSubmissionSession,packageNumber,referenceCode,previousReferenceCode,accessRestrict,appraisal,agent1,agent2,agent3,agent4,agent5,agent6,agent7
 
 metsheader.HUNGARIAN.type.recordstatus = i18n.metsheader.HUNGARIAN.type.recordstatus
 metsheader.HUNGARIAN.type.altrecordid = i18n.metsheader.HUNGARIAN.type.altrecordid
@@ -156,6 +156,7 @@ metsheader.HUNGARIAN.field.deliveryType.combo = Strukturált iktatás
 metsheader.HUNGARIAN.field.deliveryType.combo = Strukturált iratnyilvántartás
 metsheader.HUNGARIAN.field.deliveryType.combo = Struktúrálatlan
 
+# removed field since its value is constant, see roda-in issue #286
 metsheader.HUNGARIAN.field.deliverySpecification.type = altrecordid
 metsheader.HUNGARIAN.field.deliverySpecification.title = i18n.metsheader.HUNGARIAN.field.deliverySpecification.title
 metsheader.HUNGARIAN.field.deliverySpecification.label = i18n.metsheader.HUNGARIAN.field.deliverySpecification.label
