fixes #286, part 4, by removing the Package creator software fields and letting RODA-in add that information during the export procedure

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -130,7 +130,7 @@ metsheader.EARK.field.agents.attr.othertype.label = i18n.metsheader.EARK.field.a
 metsheader.EARK.field.agents.attr.othertype.description = i18n.metsheader.EARK.field.agents.attr.othertype.description
 
 
-metsheader.HUNGARIAN.fields = recordStatus,submissionAgreement,previousSubmissionAgreement,dataSubmissionSession,packageNumber,referenceCode,previousReferenceCode,accessRestrict,appraisal,agent1,agent2,agent3,agent4,agent5,agent6,agent7
+metsheader.HUNGARIAN.fields = recordStatus,submissionAgreement,previousSubmissionAgreement,dataSubmissionSession,packageNumber,referenceCode,previousReferenceCode,accessRestrict,appraisal,agent1,agent2,agent3,agent4,agent6,agent7
 
 metsheader.HUNGARIAN.type.recordstatus = i18n.metsheader.HUNGARIAN.type.recordstatus
 metsheader.HUNGARIAN.type.altrecordid = i18n.metsheader.HUNGARIAN.type.altrecordid
@@ -283,6 +283,7 @@ metsheader.HUNGARIAN.field.agent4.attr.note.mandatory = false
 metsheader.HUNGARIAN.field.agent4.attr.role.value = EDITOR
 metsheader.HUNGARIAN.field.agent4.attr.type.value = ORGANIZATION
 
+# removed as it is automatically and accurately filled by RODA-in
 metsheader.HUNGARIAN.field.agent5.type = agent
 metsheader.HUNGARIAN.field.agent5.title = i18n.metsheader.HUNGARIAN.field.agent5.title
 metsheader.HUNGARIAN.field.agent5.amount.min = 0
