--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,60 @@
 		</repository>
 	</repositories>
 
+	<profiles>
+		<profile>
+			<id>default</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<jar.id/>
+			</properties>
+		</profile>
+		<profile>
+			<id>hu</id>
+			<properties>
+				<jar.id>hu-</jar.id>
+			</properties>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-resources-plugin</artifactId>
+						<version>3.0.2</version>
+						<executions>
+							<execution>
+								<id>copy-resources</id>
+								<phase>process-classes</phase>
+								<goals>
+									<goal>copy-resources</goal>
+								</goals>
+								<configuration>
+									<outputDirectory>${project.build.outputDirectory}</outputDirectory>
+									<resources>
+										<resource>
+											<directory>src/main/resources/specific-hu</directory>
+											<filtering>true</filtering>
+										</resource>
+									</resources>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
 	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<excludes>
+					<exclude>specific-*/</exclude>
+				</excludes>
+				<filtering>false</filtering>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -68,24 +121,6 @@
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<version>${plug.version.assembly}</version>
-				<configuration>
-					<finalName>rodain-app-${project.version}</finalName>
-					<attach>true</attach>
-					<archive>
-						<manifest>
-							<addClasspath>true</addClasspath>
-							<classpathPrefix>lib/</classpathPrefix>
-							<mainClass>org.roda.rodain.Main</mainClass>
-						</manifest>
-					</archive>
-					<descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
-					<!--<descriptors> -->
-					<!--<descriptor>src/main/assembly/assembly-exclude-descriptor.xml</descriptor> -->
-					<!--</descriptors> -->
-					<appendAssemblyId>false</appendAssemblyId>
-				</configuration>
 				<executions>
 					<execution>
 						<id>make-assembly</id>
@@ -93,6 +128,24 @@
 						<goals>
 							<goal>single</goal>
 						</goals>
+						<configuration>
+							<finalName>rodain-app-${jar.id}${project.version}</finalName>
+							<attach>true</attach>
+							<archive>
+								<manifest>
+									<addClasspath>true</addClasspath>
+									<classpathPrefix>lib/</classpathPrefix>
+									<mainClass>org.roda.rodain.Main</mainClass>
+								</manifest>
+							</archive>
+							<descriptorRefs>
+								<descriptorRef>jar-with-dependencies</descriptorRef>
+							</descriptorRefs>
+							<descriptors>
+								<!--<descriptor>src/main/assembly/assembly-exclude-descriptor.xml</descriptor> -->
+							</descriptors>
+							<appendAssemblyId>false</appendAssemblyId>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
@@ -110,8 +163,8 @@
 						</goals>
 						<configuration>
 							<headerType>gui</headerType>
-							<outfile>target/rodain-app-${project.version}.exe</outfile>
-							<jar>target/rodain-app-${project.version}.jar</jar>
+							<outfile>target/rodain-app-${jar.id}${project.version}.exe</outfile>
+							<jar>target/rodain-app-${jar.id}${project.version}.jar</jar>
 							<errTitle>Error opening RODA-in</errTitle>
 							<classPath>
 								<mainClass>org.roda.rodain.Main</mainClass>
@@ -129,7 +182,7 @@
 								<txtProductVersion>2.0.0.3</txtProductVersion>
 								<productName>RODA-in</productName>
 								<internalName>RODA-in</internalName>
-								<originalFilename>rodain-app-${project.version}.exe</originalFilename>
+								<originalFilename>rodain-app-${jar.id}${project.version}.exe</originalFilename>
 							</versionInfo>
 						</configuration>
 					</execution>
@@ -190,6 +243,12 @@
 			<plugin>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>${plug.version.jar}</version>
+				<executions>
+					<execution>
+						<id>default-jar</id>
+						<phase>none</phase>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<artifactId>maven-resources-plugin</artifactId>
@@ -201,18 +260,6 @@
 			</plugin>
 		</plugins>
 	</build>
-
-	<profiles>
-		<profile>
-			<id>JDK_1.8</id>
-			<activation>
-				<jdk>1.8</jdk>
-			</activation>
-			<properties>
-				<version.java>1.8</version.java>
-			</properties>
-		</profile>
-	</profiles>
 
 	<dependencies>
 		<dependency>
