--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -26,6 +26,11 @@ help.files = metadata.png
 help.files = metadata_pt.png
 
 #########################################################
+# Active SIP types                                      #
+#########################################################
+activeSipTypes=EARK,BAGIT
+
+#########################################################
 # Metadata templates                                    #
 #########################################################
 metadata.templates=ead2002,dc,keyvalue,documentation
