--- a/src/main/resources/specific-hu/properties/config.properties
+++ b/src/main/resources/specific-hu/properties/config.properties
@@ -26,6 +26,11 @@ help.files = metadata.png
 help.files = metadata_pt.png
 
 #########################################################
+# Active SIP types                                      #
+#########################################################
+activeSipTypes=EARK,BAGIT,HUNGARIAN
+
+#########################################################
 # Metadata templates                                    #
 #########################################################
 metadata.templates=ead2002,dc,keyvalue,documentation
@@ -105,7 +110,7 @@ levels.icon.internal.topLevel = \uF1AD
 #########################################################
 
 # do not show mets header form for EARK
-metsheader.EARK.fields = status,status,agents
+metsheader.EARK.fields = status,altrecords,agents
 # show mets header form for EARK
 #metsheader.EARK.fields = status,altrecords,agents
 
@@ -120,7 +125,7 @@ metsheader.EARK.field.status.description = i18n.metsheader.EARK.field.status.des
 metsheader.EARK.field.status.amount.min = 1
 metsheader.EARK.field.status.amount.max = 1
 
-metsheader.EARK.field.status.type = altrecordid
+metsheader.EARK.field.altrecords.type = altrecordid
 metsheader.EARK.field.altrecords.title = i18n.metsheader.EARK.field.altrecords.title
 metsheader.EARK.field.altrecords.label = i18n.metsheader.EARK.field.altrecords.label
 metsheader.EARK.field.altrecords.description = i18n.metsheader.EARK.field.altrecords.description
