Solved issue #290 by explicitly copying all the help files (mentioned in config.properties; otherwise using exe in windows would fail to copy them)

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -10,6 +10,22 @@ producer= RODA-in
 idPrefix=uuid-
 
 #########################################################
+# Help files                                            #
+#########################################################
+help.files = association_en.png
+help.files = association.png
+help.files = association_pt.png
+help.files = help_en.html
+help.files = help.html
+help.files = help_pt.html
+help.files = layout_en.png
+help.files = layout.png
+help.files = layout_pt.png
+help.files = metadata_en.png
+help.files = metadata.png
+help.files = metadata_pt.png
+
+#########################################################
 # Metadata templates                                    #
 #########################################################
 metadata.templates=ead2002,dc,keyvalue,documentation
