added new help images to the help.files property

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -15,6 +15,8 @@ idPrefix=uuid-
 help.files = association_en.png
 help.files = association.png
 help.files = association_pt.png
+help.files = createhusip_en.png
+help.files = createsip_en.png
 help.files = help_en.html
 help.files = help.html
 help.files = help_pt.html
@@ -24,6 +26,7 @@ help.files = layout_pt.png
 help.files = metadata_en.png
 help.files = metadata.png
 help.files = metadata_pt.png
+help.files = packagedescription_en.png
 
 #########################################################
 # Active SIP types                                      #
