--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -34,12 +34,12 @@ activeSipTypes=EARK,BAGIT
 #########################################################
 # Metadata templates                                    #
 #########################################################
-metadata.templates=ead2002,dc,keyvalue,documentation
+metadata.templates=ead2002,dc,keyvalue
 
 #########################################################
 # Metadata types                                        #
 #########################################################
-metadata.types=ead2002,dc,keyvalue,documentation
+metadata.types=ead2002,dc,keyvalue
 
 #########################################################
 # Metadata definition                                   #
