improved transifex config

--- a/.tx/config
+++ b/.tx/config
@@ -3,14 +3,14 @@ host = https://www.transifex.com
 lang_map = pt_PT: pt
 
 [roda-in.lang]
-file_filter = properties/lang_<lang>.properties
+file_filter = src/main/resources/properties/lang_<lang>.properties
 minimum_perc = 100
 source_file = src/main/resources/properties/lang_en.properties
 source_lang = en
 type = UNICODEPROPERTIES
 
 [roda-in.help]
-file_filter = properties/help_<lang>.properties
+file_filter = src/main/resources/properties/help_<lang>.properties
 minimum_perc = 100
 source_file = src/main/resources/properties/help_en.properties
 source_lang = en
