--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>org.roda</groupId>
 	<artifactId>rodain</artifactId>
-	<version>2.1.0-beta.2</version>
+	<version>2.1.0-beta.3</version>
 
 	<prerequisites>
 		<maven>3.0</maven>
@@ -28,7 +28,7 @@
 		<plug.version.resources>3.0.2</plug.version.resources>
 		<plug.version.site>3.6</plug.version.site>
 		<!-- dependencies versions -->
-		<dep.version.commons-ip>1.0.0-alpha31</dep.version.commons-ip>
+		<dep.version.commons-ip>1.0.0</dep.version.commons-ip>
 		<dep.version.sf-test>4.0.6-alpha</dep.version.sf-test>
 		<dep.version.jackson>2.8.7</dep.version.jackson>
 		<dep.version.slf4j>1.7.25</dep.version.slf4j>
@@ -220,7 +220,7 @@
 					<!-- this is false by default, forces the plugin to generate the file -->
 					<generateGitPropertiesFile>true</generateGitPropertiesFile>
 
-					<!-- The path for the properties file to be generated. See Super Pom 
+					<!-- The path for the properties file to be generated. See Super Pom
 						for default variable reference https://maven.apache.org/guides/introduction/introduction-to-the-pom.html -->
 					<generateGitPropertiesFilename>
 						${project.basedir}/src/main/resources/build.properties
