fixes #309 by adding only the folder contents to the representation when creating a sip for each selected item and the selected item being handled is a folder (instead of adding the folder itself and its contents). The default behaviour is to only add the folder contents (i.e. skip the folder) if those contents are only files (if there is a folder, the base folder is also added); this default behaviour is in effect in the base release, and the new behaviour (always skip the base folder) is effective in the hungarian release (via configuration property)

--- a/src/main/resources/specific-hu/properties/config.properties
+++ b/src/main/resources/specific-hu/properties/config.properties
@@ -91,6 +91,11 @@ metadata.documentation.aggregationLevel = series
 metadata.documentation.topLevel = fonds
 
 #########################################################
+# SIP Creation                                          #
+#########################################################
+sipPreviewCreator.createSip.alwaysJumpFolder = true
+
+#########################################################
 # Icons                                                 #
 #########################################################
 # EAD 2002 LEVELS
