--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -107,6 +107,11 @@ levels.icon.internal.aggregationLevel = \uF0C9
 levels.icon.internal.topLevel = \uF1AD
 
 #########################################################
+# SIP Creation                                          #
+#########################################################
+sipPreviewCreator.createSip.alwaysJumpFolder = false
+
+#########################################################
 # METS Header form                                      #
 #########################################################
 
