--- a/src/main/resources/specific-hu/properties/config.properties
+++ b/src/main/resources/specific-hu/properties/config.properties
@@ -94,6 +94,7 @@ metadata.documentation.topLevel = fonds
 # SIP Creation                                          #
 #########################################################
 sipPreviewCreator.createSip.alwaysJumpFolder = true
+creationModalPreparation.defaultSipType = Hungarian SIP 4
 
 #########################################################
 # Icons                                                 #
