--- a/src/main/resources/specific-hu/properties/config.properties
+++ b/src/main/resources/specific-hu/properties/config.properties
@@ -3,6 +3,7 @@
 #########################################################
 creator= RODA-in
 producer= RODA-in
+defaultLanguage=hu
 
 #########################################################
 # ID prefix                                             #
