--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>org.roda</groupId>
 	<artifactId>rodain</artifactId>
-	<version>2.1.0-beta.7</version>
+	<version>2.1.0</version>
 
 	<prerequisites>
 		<maven>3.0</maven>
