--- a/src/main/resources/specific-hu/properties/config.properties
+++ b/src/main/resources/specific-hu/properties/config.properties
@@ -34,7 +34,7 @@ help.files = packagedescription_en.png
 #########################################################
 # Active SIP types                                      #
 #########################################################
-activeSipTypes=EARK,BAGIT,HUNGARIAN
+activeSipTypes=EARK,EARK2,BAGIT,HUNGARIAN
 
 #########################################################
 # Metadata templates                                    #
